tests/baselines/reference/functionOverloads2.errors.txt
tests/cases/compiler/functionOverloads2.ts(4,9): error TS2763: No overload matches this call.
  Overload 1 of 2, '(bar: string): string', gave the following error.
    Argument of type 'true' is not assignable to parameter of type 'string'.
  Overload 2 of 2, '(bar: number): number', gave the following error.
    Argument of type 'true' is not assignable to parameter of type 'number'.


==== tests/cases/compiler/functionOverloads2.ts (1 errors) ====
    function foo(bar: string): string;
    function foo(bar: number): number;
    function foo(bar: any): any { return bar };
    var x = foo(true);
            ~~~~~~~~~
!!! error TS2763: No overload matches this call.
!!! error TS2763:   Overload 1 of 2, '(bar: string): string', gave the following error.
!!! error TS2763:     Argument of type 'true' is not assignable to parameter of type 'string'.
!!! error TS2763:   Overload 2 of 2, '(bar: number): number', gave the following error.
!!! error TS2763:     Argument of type 'true' is not assignable to parameter of type 'number'.